--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -1,20 +1,23 @@
 site_name: xscript
 
 nav:
-        - 主页: index.md
-        - 学习xscript: learn.md
-        - xscript如何工作: howto.md
-        - xscript标准库:
-          - 索引: lib/index.md
-          - file: lib/file.md
-          - random: lib/random.md
-          - table: lib/table.md
-          - time: lib/time.md
-          - turtle: lib/turtle.md
-          - ui: lib/ui.md
-          - util: lib/util.md
-        - 报告BUG: bug.md
+  - 主页: index.md
+  - 学习xscript: learn.md
+  - xscript如何工作: howto.md
+  - xscript标准库:
+    - 索引: lib/index.md
+    - file: lib/file.md
+    - random: lib/random.md
+    - table: lib/table.md
+    - time: lib/time.md
+    - turtle: lib/turtle.md
+    - ui: lib/ui.md
+    - util: lib/util.md
+  - 报告BUG: bug.md
 
 theme: readthedocs
 
 copyright: Copyright &copy 2020 jason-bowen-zheng<br>All Right Reserved.
+
+markdown_extensions:
+  - admonition
