--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -2,8 +2,11 @@ site_name: xscript
 
 nav:
   - 主页: index.md
-  - 学习xscript: learn.md
   - xscript如何工作: howto.md
+  - 报告BUG: bug.md
+  - 学习xscript:
+    - 目录: learn/index.md
+    - 基本输入输出: learn/basic-io.md
   - xscript标准库:
     - 索引: lib/index.md
     - file: lib/file.md
@@ -13,7 +16,6 @@ nav:
     - turtle: lib/turtle.md
     - ui: lib/ui.md
     - util: lib/util.md
-  - 报告BUG: bug.md
 
 theme: readthedocs
 
