--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -8,6 +8,7 @@ nav:
     - 目录: learn/index.md
     - 安装xscript: learn/install.md
     - 基本输入输出: learn/basic-io.md
+    - 使用debug: learn/use-debug.md
   - xscript标准库:
     - 索引: lib/index.md
     - file: lib/file.md
